--- a/README
+++ b/README
@@ -5,10 +5,13 @@ author: Dennis Yolkin [dennisyolkin (=a.t=) gmail.com]
 
 Articles about file formats that were used: http://gtamodding.ru/wiki
 
-Here is GtaLight project that also can render GTA gameworld:
+Here is GtaLight project (writtem in C++) that also can render GTA gameworld:
 http://b66883.com/projects/gtalight/gtalight_20090416_23-10.zip
 (this link was found here: 
 http://irrlicht.sourceforge.net/phpBB2/viewtopic.php?t=30439&postdays=0&postorder=asc&start=75).
+
+Here is one more interesting project: http://www.chronetal.co.uk/gta/index.php?page=main.
+It is MooMapper project that allows to view and modify GTA gameworld. Writeen in Delphi7.
 
 -------------------------------------------------------------------------------------------------------------------------------
 
