--- a/TODO
+++ b/TODO
@@ -4,4 +4,4 @@ TODO list
 You can find Issues on the official site of the project:
   http://github.com/dennisyolkin/gta_gameworld_renderer/issues/
   
-Sorry, but the mose issues are written it Russian now. But I'll try to add new issues only in English.
+Sorry, but the most of issues are written it Russian now. But I'll try to add new issues only in English.
