--- a/README
+++ b/README
@@ -1,21 +1,32 @@
 GTA GameWorld Renderer README
 =============================
 
-The current goal of this project is to implement a Windows Application (using Microsoft XNA 
-Game Studio), that allows you to render GTA III, Gta ViceCity and GTA SanAndreas 
-game world. 
+This project is 3D viewer of maps from games GTA III and GTA ViceCity. The application
+is implemented as Windows Application (using Microsoft XNA Game Studio).
 
 author: Dennis Yolkin [dennisyolkin (=a.t=) gmail.com]
 
 Articles about file formats that were used: http://gtamodding.ru/wiki
 
-Here is GtaLight project (writtem in C++) that also can render GTA gameworld:
+Here is GtaLight project (written in C++) that also can render GTA gameworld:
 http://b66883.com/projects/gtalight/gtalight_20090416_23-10.zip
 (this link was found here: 
 http://irrlicht.sourceforge.net/phpBB2/viewtopic.php?t=30439&postdays=0&postorder=asc&start=75).
 
 Here is one more interesting project: http://www.chronetal.co.uk/gta/index.php?page=main.
 It is MooMapper project that allows to view and modify GTA gameworld. Writeen in Delphi7.
+
+Please see project wiki page for some more information:
+http://wiki.github.com/dennisyolkin/gta_gameworld_renderer/
+
+--------------------------------------------------------------------------------
+
+Keyboard map:
+
+Arrows: move camera
+Mouse (with left button pressed): rotate camera
+W: switch between normal mode and wireframe mode
+F5: switch to 2D view (for debug purposes only)
 
 --------------------------------------------------------------------------------
 
@@ -27,3 +38,5 @@ Directories structure:
 GTA World Renderer -- Visual Studio 2008 project folder
 GTA World Renderer\app_working_dir -- Program working directory. Now it contains 
    of only configuration xml file and its schema.
+screenshots -- screensoht for wiki page of the project
+
